Customers_and_Partner_styling_how_itworks_

--- a/templates/team/team.html.twig
+++ b/templates/team/team.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Unser Team{% endblock %}
+{% block title %}Our Team{% endblock %}
 
 {% block stylesheets %}
 {% endblock %}
@@ -8,7 +8,7 @@
 {% block body %}
 
 <br><br><br><br><br>
-<h1 style="text-align: center; color: white; font-size: 50px;">Unser Team</h1>
+<h1 style="text-align: center; color: white; font-size: 50px;">Our Team</h1>
 
 <div style="display: flex; flex-wrap: wrap; gap: 30px; justify-content: center; margin-top: 60px;">
     {% for member in team %}
