--- a/templates/static/navbar.html.twig
+++ b/templates/static/navbar.html.twig
@@ -28,7 +28,7 @@
                   </li>
 
                   <li class="nav-item">
-                  <a class="nav-link" href="{{ path('app_shopping_list') }}">Shopping List</a>
+                  <a class="nav-link" href="{{ path('app_shopping_list_new') }}">Shopping List</a>
                    </li>
                 {% endif %}
 
