--- a/templates/shopping_list/new.html.twig
+++ b/templates/shopping_list/new.html.twig
@@ -1,31 +1,27 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New shopping list{% endblock %}
+{% block title %}Add New Shopping List{% endblock %}
 
 {% block body %}
     <section class="py-5 bg-light">
-        <div class="container">
-            <div class="d-flex justify-content-between align-items-center mb-4">
-                <h2 class="mb-0">New shopping list</h2>
+        <div class="container bg-white p-3">
+            <h1 class="mb-3">New shopping list</h1>
+            <p class="mb-3 text-muted">&nbsp;</p>
+            <div class="row">
+                {{ form_start(form) }}
+                {{ form_row(form.name) }}
+                <ul class="items" data-prototype="{{ form_widget(form.items.vars.prototype)|e('html_attr') }}">
+                    {% for item in form.items %}
+                        <li>{{ form_row(item.amount) }} {{ form_row(item.name) }}</li>
+                    {% endfor %}
+                </ul>
+                
+                <button type="button" class="add_item btn btn-sm custom-button mb-3">+ Add ingredient</button>
+                <button type="submit" class="btn btn-sm custom-button mb-3">Save list</button>
+                {{ form_end(form) }}
             </div>
         </div>
     </section>
-
-    <div class="container">
-        {{ form_start(form) }}
-        {{ form_row(form.name) }}
-        
-        <h3>Zutaten</h3>
-        <ul class="items" data-prototype="{{ form_widget(form.items.vars.prototype)|e('html_attr') }}">
-            {% for item in form.items %}
-                <li>{{ form_row(item.amount) }} {{ form_row(item.name) }}</li>
-            {% endfor %}
-        </ul>
-        
-        <button type="button" class="add_item">+ Add ingredient</button>
-        <button type="submit">Save list</button>
-    {{ form_end(form) }}
-    </div>
     <script>
         document.querySelector('.add_item').addEventListener('click', function() {
             const items = document.querySelector('.items');
