--- a/templates/shopping_list/new.html.twig
+++ b/templates/shopping_list/new.html.twig
@@ -6,7 +6,7 @@
     <section class="py-5 bg-light">
         <div class="container bg-white p-3">
             <h1 class="mb-3">New shopping list</h1>
-            <p class="mb-3 text-muted">&nbsp;</p>
+            <p class="mb-3 text-muted">Compose your list</p>
             <div class="row">
                 {{ form_start(form) }}
                 {{ form_row(form.name) }}
