--- a/templates/shopping_list/index.html.twig
+++ b/templates/shopping_list/index.html.twig
@@ -6,7 +6,7 @@
 <section class="py-5 bg-light">
     <div class="container bg-white p-3">
         <h1>My shopping lists <a class="btn btn-sm custom-button" href="{{ path('app_shopping_list_new') }}">Add list</a></h1>
-        <p class="mb-3 text-muted">&nbsp;</p>
+        <p class="mb-3 text-muted">Your current lists</p>
         <div class="row">
             {% for list in lists %}
                 <div class="col-12 col-sm-6 col-md-3 col-lg-3">
