google_reviews_whatsapp_icon_contact

--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -90,6 +90,7 @@
     <div class="alert alert-danger">
         {{ message }}
     </div>
+   
 {% endfor %}
                     </form>
                 </div>
@@ -98,6 +99,14 @@
         </div>
     </div>
 </section>
+
+<a href="https://wa.me/491234567890" 
+style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;" 
+target="_blank" rel="noopener noreferrer">
+ <img src="{{ asset('images/whatsapp-icon.png') }}" 
+      alt="WhatsApp" 
+      style="height: 60px; width: 60px;">
+</a>
 
 <br><br><br><br><br><br>
 {% endblock %}
