--- a/templates/shopping_list/index.html.twig
+++ b/templates/shopping_list/index.html.twig
@@ -3,13 +3,18 @@
 {% block title %}My Shopping Lists{% endblock %}
 
 {% block body %}
+<style>
+    .card-wrapper {
+        margin-bottom: 2rem;
+    }
+</style>
 <section class="py-5 bg-light">
     <div class="container bg-white p-3">
         <h1>My shopping lists <a class="btn btn-sm custom-button" href="{{ path('app_shopping_list_new') }}">Add list</a></h1>
         <p class="mb-3 text-muted">Your current lists</p>
         <div class="row">
             {% for list in lists %}
-                <div class="col-12 col-sm-6 col-md-3 col-lg-3">
+                <div class="col-12 col-sm-6 col-md-3 col-lg-3 card-wrapper">
                     <div class="card h-100">
                         <div class="card-body text-center">
                             <h5>{{ list.name }}</h5>
