small navbar changes

--- a/templates/static/navbar.html.twig
+++ b/templates/static/navbar.html.twig
@@ -12,34 +12,36 @@
                 {% set currentRoute = app.request.attributes.get('_route') %}
 
                 <li class="nav-item">
-                    <a class="nav-link {% if currentRoute == 'app_home' %}active fw-bold text-primary{% endif %}" href="{{ path('app_home') }}">Home</a>
+                
+
+                    <a class="nav-link {% if currentRoute == 'app_home' %}active fw-bold text-danger{% endif %}" href="{{ path('app_home') }}">Home</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link {% if currentRoute == 'app_about' %}active fw-bold text-primary{% endif %}" href="{{ path('app_about') }}">How it works</a>
+                    <a class="nav-link {% if currentRoute == 'app_about' %}active fw-bold text-danger{% endif %}" href="{{ path('app_about') }}">How it works</a>
                 </li>
                {% if app.user %}
                  <li class="nav-item">
-                  <a class="nav-link" href="{{ path('app_recipe_index') }}">Browse Recipe</a>
+                  <a class="nav-link {% if currentRoute == 'app_recipe_index' %}active fw-bold text-danger{% endif %}" href="{{ path('app_recipe_index') }}">Browse Recipe</a>
                    </li>
 
                  <li class="nav-item">
-                <a class="nav-link {% if currentRoute == 'app_meal_plan_index' %}active fw-bold text-primary{% endif %}" href="{{ path('app_meal_plan_index') }}">Meal Planner</a>
+                <a class="nav-link {% if currentRoute == 'app_meal_plan_index' %}active fw-bold text-danger{% endif %}" href="{{ path('app_meal_plan_index') }}">Meal Planner</a>
                   </li>
 
                   <li class="nav-item">
-                  <a class="nav-link" href="{{ path('app_shopping_list_index') }}">Shopping List</a>
+                  <a class="nav-link {% if currentRoute == 'app_shopping_list_index' %}active fw-bold text-danger{% endif %}" href="{{ path('app_shopping_list_index') }}">Shopping List</a>
                    </li>
                 {% endif %}
 
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_contact') }}">Contact</a>
+                    <a class="nav-link {% if currentRoute == 'app_contact' %}active fw-bold text-danger{% endif %}" href="{{ path('app_contact') }}">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_team') }}">Team</a>
+                    <a class="nav-link {% if currentRoute == 'app_team' %}active fw-bold text-danger{% endif %}" href="{{ path('app_team') }}">Team</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_customers') }}">Customers</a>
+                    <a class="nav-link {% if currentRoute == 'app_customers' %}active fw-bold text-danger{% endif %}" href="{{ path('app_customers') }}">Customers</a>
                 </li>
 
                 {% if app.user and is_granted('ROLE_ADMIN') %}
