--- a/templates/static/home.html.twig
+++ b/templates/static/home.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Index - Homapge{% endblock %}
+{% block title %}Homepage{% endblock %}
 
 {% block body %}
   <style>
